commit con todo menos idioma

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                 <div class="single-profile">
                   <div class="profile-txt">
                     <a href="https://github.com/BrianArrua96/BrianArrua96"><i class="flaticon-github-logo"></i></a>
-                    <div class="profile-icon-name">Grado Medio</div>
+                    <div class="profile-icon-name">Juego Java</div>
                   </div>
                   <div class="single-profile-overlay">
                     <div class="profile-txt">
@@ -669,13 +669,12 @@
               <div class="col-sm-3">
                 <div class="single-profile">
                   <div class="profile-txt">
-                    <a href=""><i class="flaticon-dribbble"></i></a>
-                    <div class="profile-icon-name">dribbble</div>
+                    <a href="https://github.com/BrianArrua96/BrianArrua96"><i class="flaticon-github-logo"></i></a>
+                    <div class="profile-icon-name">Slides</div>
                   </div>
                   <div class="single-profile-overlay">
                     <div class="profile-txt">
-                      <a href=""><i class="flaticon-dribbble"></i></a>
-                      <div class="profile-icon-name">dribbble</div>
+                      <a href="https://github.com/BrianArrua96/Project-Slides"><div class="profile-icon-name">Projecto Slides</div></a>
                     </div>
                   </div>
                 </div>
@@ -683,13 +682,12 @@
               <div class="col-sm-3">
                 <div class="single-profile">
                   <div class="profile-txt">
-                    <a href=""><i class="flaticon-behance-logo"></i></a>
-                    <div class="profile-icon-name">behance</div>
+                    <a href="https://github.com/BrianArrua96/Project-Tickets"><i class="flaticon-github-logo"></i></a>
+                    <div class="profile-icon-name">Tickets</div>
                   </div>
                   <div class="single-profile-overlay">
                     <div class="profile-txt">
-                      <a href=""><i class="flaticon-behance-logo"></i></a>
-                      <div class="profile-icon-name">behance</div>
+                      <a href="https://github.com/BrianArrua96/Project-Tickets"><div class="profile-icon-name">Projecto Tickets</div></a>
                     </div>
                   </div>
                 </div>
@@ -697,13 +695,12 @@
               <div class="col-sm-3">
                 <div class="single-profile profile-no-border">
                   <div class="profile-txt">
-                    <a href=""><i class="flaticon-github-logo"></i></a>
-                    <div class="profile-icon-name">github</div>
+                    <a href="https://github.com/BrianArrua96/PortafolioBrianArrua"><i class="flaticon-github-logo"></i></a>
+                    <div class="profile-icon-name">Portafolio</div>
                   </div>
                   <div class="single-profile-overlay">
                     <div class="profile-txt">
-                      <a href=""><i class="flaticon-github-logo"></i></a>
-                      <div class="profile-icon-name">github</div>
+                      <a href="https://github.com/BrianArrua96/PortafolioBrianArrua"><div class="profile-icon-name">Portafolio</div></a>
                     </div>
                   </div>
                 </div>
@@ -747,10 +744,6 @@
                   <ul>
                     <li>
                       <a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <!--/li-->
-                    <li>
-                      <a href="#"><i class="fa fa-dribbble"></i></a>
                     </li>
                     <!--/li-->
                     <li>
@@ -837,5 +830,6 @@
 
     <!--Custom JS-->
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/Idiomas.js"></script>
   </body>
 </html>
